--- a/views/index.ejs
+++ b/views/index.ejs
@@ -38,13 +38,26 @@
         </div>
 
         <!-- Dashboard -->
-        <div id="main-wrapper" class="grid lg:grid-cols-3 gap-10 items-center p-2">
-            <div class="border-2 text-center rounded-xl p-2 shadow-sm"><h1>22:53</h1><h1>30-Sept-2024</h1></div>
+        <div id="main-wrapper" class="grid lg:grid-cols-3 gap-6 items-center p-2">
+            <div class="border-2 text-center rounded-xl shadow-sm w-1/2 bg-gradient-to-b from-blue-500 to-purple-500 p-6 text-white font-bold">
+                <h1>22:53</h1>
+                <h1>30-Sept-2024</h1>
+                
+            </div>
             <div class="border-2 text-center rounded-xl p-2 shadow-sm">Daily Goals</div>
-            <div class="border-2 text-center rounded-xl p-2 shadow-sm">Weekly Goals</div>
-            <div class="border-2 text-center rounded-xl p-2 shadow-sm">Food for thought</div>
-            <div class="border-2 text-center rounded-xl p-2 shadow-sm">Notes</div>
             <div class="border-2 text-center rounded-xl p-2 shadow-sm"><h1>Pomodoro</h1><h1>30:41</h1><button>start</button></div>
+
+            <div class="border-2 text-center rounded-xl p-2 shadow-sm">Weekly Goals</div>
+            <div class="border-2 text-center rounded-xl p-4 shadow-sm">
+                <h2 class="font-bold">Food for thought</h2>
+                <p >"I've grown to realize that, the more I practice, The luckier I get" - Thomas Jefferson</p>
+            </div>
+
+
+
+
+            <div class="border-2 text-center rounded-xl p-2 shadow-sm ">Notes</div>
+            
         </div>
 
 
