Database connection made

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
 
         <%- include('./partials/nav.ejs') %>  <!--  Logo and NAvigation   -->
 
-        <%- include('./partials/task-input.ejs') %>  <!--  Task input section   -->
+        <%- include('./partials/form.ejs') %>  <!--  Task input section   -->
 
         <%- include('./partials/dashboard.ejs') %>  <!--  Main page   -->
 
