--- a/public/styles.css
+++ b/public/styles.css
@@ -563,16 +563,16 @@ video {
   margin-right: auto;
 }
 
+.ml-auto {
+  margin-left: auto;
+}
+
 .flex {
   display: flex;
 }
 
 .grid {
   display: grid;
-}
-
-.w-1\/2 {
-  width: 50%;
 }
 
 .flex-col {
@@ -656,6 +656,11 @@ video {
 
 .text-center {
   text-align: center;
+}
+
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
 }
 
 .text-4xl {
