--- a/views/partials/dashboard.ejs
+++ b/views/partials/dashboard.ejs
@@ -5,10 +5,24 @@
                 <h1>30-Sept-2024</h1>
                 
             </div>
-            <div class="border-2 text-center p-2 shadow-sm">Daily Goals</div>
+            <div class="border-2 text-center p-2 shadow-sm">  <!-- Daily Tasks -->
+                <div><h1 class="text-2xl font-bold">Daily Tasks</h1></div>
+                <div class="flex items-center justify-between">
+                    <div class="flex items-center space-x-4">
+                        <!-- <img src="/public/img/task-list.ico" alt="task icon"> -->
+                        <h3>&rarr; Add a new task</h3>
+                    </div>
+                    <div class="flex items-center space-x-4 ml-auto">
+                        <h3>Due: 05/12/2024</h3>
+                        <button class="border-2 p-2">Delete</button>
+                    </div>
+                </div>
+            </div>
+
             <div class="border-2 text-center p-2 shadow-sm"><h1>Pomodoro</h1><h1>30:41</h1><button>start</button></div>
 
             <div class="border-2 text-center p-2 shadow-sm">Weekly Goals</div>
+
             <div class="border-2 text-center p-4 shadow-sm">
                 <h2 class="font-bold">Food for thought</h2>
                 <p >"I've grown to realize that, the more I practice, The luckier I get" - Thomas Jefferson</p>
@@ -17,3 +31,5 @@
             <div class="border-2 text-center p-2 shadow-sm ">Notes</div>
             
         </div>
+
+        <!-- <a href="https://www.flaticon.com/free-icons/task" title="task icons">Task icons created by Freepik - Flaticon</a> -->
