--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,11 @@
 
         <%- include('./partials/form.ejs') %>  <!--  Task input section   -->
 
-        <%- include('./partials/dashboard.ejs') %>  <!--  Main page   -->
+        <%- include('./partials/dashboard.ejs') %>  <!--  Task input section   -->
+
+
+        
+            
 
     </div> <!--Content wrapper end   -->
 </body>
