Now to make it pretty

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,12 @@
 <%- include('./partials/header.ejs') %>
 
-<body>
+
+<body class="text-gray-500">
     <div id="page-wrapper"> <!--Content wrapper   -->
 
         <%- include('./partials/nav.ejs') %>  <!--  Logo and NAvigation   -->
 
-        <%- include('./partials/form.ejs') %>  <!--  Task input section   -->
+        <%- include('./partials/form.ejs') %>  <!--  Input form section   -->
 
         <%- include('./partials/dashboard.ejs') %>  <!--  Task input section   -->
 
