--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,6 +1,10 @@
 <div class="flex flex-wrap justify-between items-center  border-2 p-2"> <!--Logo and Navigation   -->
+    
     <div>
-        <h1 class="text-4xl text-blue-500 font-bold">Task.Tamarin</h1>
+        <h1 class=" flex text-4xl text-blue-500 font-bold">Task.Tamarin</h1>
+        <div class="w-10 h-10 relative">
+            <img src="/public/tamarin.svg" alt="trashcan" class="absolute inset-0 w-full h-full object-contain">
+        </div>
     </div>
     
     <nav>
