--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,12 +1,8 @@
 <%- include('./partials/header.ejs') %>
 
 
-<body class="text-gray-500" style="background-image: url('/thomas-heintz-0tgMnMIYQ9Y-unsplash.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat;" >
-
-
-
-
-    <div id="page-wrapper" > <!--Content wrapper   -->
+<body class="text-gray-500">
+    <div id="page-wrapper"> <!--Content wrapper   -->
 
         <%- include('./partials/nav.ejs') %>  <!--  Logo and NAvigation   -->
 
