--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -11,12 +11,12 @@
     </div>
 
     
-    <nav>
+    <!-- <nav>
         <ul class="flex space-x-4 mr-2">
             <li><a href="#">All Tasks</a></li>
             <li><a href="#">Low Priority</a></li>
             <li><a href="#">Mid Priority</a></li>
             <li><a href="#">High Priority</a></li>
         </ul>
-    </nav>
+    </nav> -->
 </div>
