Build failed test 2

--- a/views/partials/dashboard.ejs
+++ b/views/partials/dashboard.ejs
@@ -1,7 +1,7 @@
 <div id="main-wrapper" class="grid lg:grid-cols-2 gap-6 items-center p-6">   
     
     <div class="time-date">  
-        <div class="border-2 text-center shadow-sm font-bold text-center">
+        <div class="border-2 shadow-sm font-bold text-center">
             <h1 class="text-4xl m-2 w-1/4 ">Countdown Timer</h1>
             <h1 class="text-3xl m-2">35:00</h1>
             <button class="border-2 p-2 m-2" >Start</button>
