Test 15 [svg get err]...

--- a/views/partials/dashboard.ejs
+++ b/views/partials/dashboard.ejs
@@ -22,7 +22,7 @@
                     <div class="flex-1 flex items-center space-x-4">
                         <div class="w-6 h-6 relative">
                             
-                            <!-- <img src="/task-list.svg" alt="trashcan" class="absolute inset-0 w-full h-full object-contain"> -->
+                            <img src="/task-list.svg" alt="trashcan" class="absolute inset-0 w-full h-full object-contain">
                         </div>
                         
                         <h3 class="text-sm"><span class="font-bold"></span> &#10162; <%= task.task %></h3>
@@ -70,10 +70,6 @@
 
     
 
-    <!-- <div class="border-2 text-center p-4 shadow-sm">
-        <h2 class="font-bold">Food for thought</h2>
-        <p>"I've grown to realize that, the more I practice, The luckier I get" - Thomas Jefferson</p>
-    </div> -->
 
     <!-- Notes -->
     <!-- <div class="border-2 p-4 shadow-sm"> 
