general style, code clean up

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,8 +1,9 @@
 <%- include('./partials/header.ejs') %>
 
 
-<body class="text-gray-500">
-    <div id="page-wrapper"> <!--Content wrapper   -->
+<body class="">
+    <div id="page-wrapper" 
+        style="background-image: url('/cool-background.svg'); background-size: cover; background-repeat: no-repeat; background-position: center; height: 100vh; backdrop-filter: blur(5px)"> <!--Content wrapper   -->
 
         <%- include('./partials/nav.ejs') %>  <!--  Logo and NAvigation   -->
 
