--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,13 +1,9 @@
-<div class="flex flex-wrap justify-between items-center border-2 p-2 bg-white"> <!-- Logo and Navigation -->
+<div class="flex flex-wrap justify-center items-center border-b-2 lg:p-2 bg-white"> <!-- Logo and Navigation -->
     
     <div class="flex items-center"> <!-- Center the logo and title -->
-        <h1 class="flex text-4xl ml-2 text-gray-500 font-bold items-center">
-            Task
-            <div class="w-24 h-24 relative ml-2"> <!-- Added margin for spacing -->
-                <img src="/tamarin-monkey.svg" alt="tamarin monkey" class="absolute inset-0 w-full h-full object-contain">
-            </div>
-            Tamarin
-        </h1>
+        <div class="w-24 h-24 lg:w-32 lg:h-32 relative ml-2"> <!-- Added margin for spacing -->
+            <img src="/Logo.svg" alt="logo" class="absolute inset-0 w-full h-full object-contain">
+        </div>
     </div>
 
     
