--- a/views/partials/dashboard.ejs
+++ b/views/partials/dashboard.ejs
@@ -1,45 +1,46 @@
-<div id="main-wrapper" class="grid lg:grid-cols-2 gap-6 items-center p-6">   
-    
-    <div class="time-date">  
-        <div class="border-2 shadow-sm font-bold text-center">
-            <h1 class="text-4xl m-2 w-1/4 ">Countdown Timer</h1>
-            <h1 class="text-3xl m-2">35:00</h1>
-            <button class="border-2 p-2 m-2" >Start</button>
-            <button class="border-2 p-2 m-2" >Reset</button>
-        </div>
-    </div>
-    
+<div id="main-wrapper" class="flex flex-col items-center px-6">
 
+        <div class="w-full lg:w-[55%] border text-center shadow-lg p-2 rounded-xl bg-white"> 
+            <!-- Daily Tasks -->
+            <div>
+                <h1 class="lg:text-3xl text-2xl font-bold border-b-2 m-4 text-blue-500">Daily Tasks</h1>
+            </div>
 
-
-    <div class="border-2 text-center p-2 shadow-sm"> <!-- Daily Tasks -->
-        <div>
-            <h1 class="text-2xl font-bold border-b-4">Daily Tasks</h1>
-        </div>
-        <ul>
-            <% tasks.forEach(task => { %>  
-                <li class="flex justify-between p-2 border-b">
-                    <div class="flex-1 flex items-center space-x-4">
-                        <div class="w-6 h-6 relative">
-                            
-                            <img src="/task-list.svg" alt="trashcan" class="absolute inset-0 w-full h-full object-contain">
+            <ul>
+                <% tasks.forEach(task => { %>  
+                    <li class="flex justify-between p-2 hover:bg-gray-400 hover:rounded-xl hover:scale-105 hover:text-white hover:shadow-lg transition-all duration-300">
+                        <!-- Tasks -->
+                        <div class="flex-1 flex items-center space-x-4">
+                            <div class="w-3 h-6 lg:w-8 lg:h-8 relative">
+                                <img src="/light-bulb.svg" alt="edit" class="absolute inset-0 w-full h-full object-contain fill-current text-green-500" >
+                            </div>                       
+                            <h3 class="text-sm md:text-base lg:text-lg xl:text-lg">
+                                <span class="font-bold"></span><%= task.task %>
+                            </h3>
                         </div>
-                        
-                        <h3 class="text-sm"><span class="font-bold"></span> &#10162; <%= task.task %></h3>
-                    </div>
-    
-                    <div class="flex-1 flex items-center justify-end space-x-4"> <!-- Date/Delete section -->
-                        <h3 class="text-sm text-blue-500">Due: <%= task.date ? new Date(task.date).toLocaleDateString() : 'No due date' %></h3>  
-                        
-                        <button class="deleteButton p-2" data-doc="<%= task._id %>">
-                            <div class="w-6 h-6 relative">
-                                <img src="/trashcan.svg" alt="trashcan" class="absolute inset-0 w-full h-full object-contain">
-                            </div>
-                        </button>
-                    </div>
-                </li>
-            <% }); %>
-        </ul>
+
+                        <!-- Date -->
+                        <div class="flex-1 flex items-center justify-end space-x-4"> 
+                            <h3 class="text-sm font-bold sm:text-xs">Due: <%= task.date ? new Date(task.date).toLocaleDateString() : 'No due date' %></h3>  
+
+                            <!-- Edit -->
+                            <button class="editButton" data-doc="<%= task._id %>">
+                                <div class="w-4 h-6 lg:w-8 lg:h-8 lg:ml-4 relative">
+                                    <img src="/edit.svg" alt="edit" class="absolute inset-0 w-full h-full object-contain fill-current text-green-500" >
+                                </div>
+                            </button>
+
+                            <!-- Delete -->
+                            <button class="deleteButton" data-doc="<%= task._id %>">
+                                <div class="w-4 h-6 lg:w-8 lg:h-8 lg:ml-4 relative">
+                                    <img src="/trashcan.svg" alt="trashcan" class="absolute inset-0 w-full h-full object-contain">
+                                </div>
+                            </button>
+                        </div>
+                    </li>
+                <% }); %>
+            </ul>
+        </div>
     </div>
 
     <script>
