--- a/views/partials/form.ejs
+++ b/views/partials/form.ejs
@@ -1,28 +1,15 @@
-<div class="formHead flex justify-between items-center p-2"> 
+<div class="formHead flex justify-between items-center p-4"> 
 
-    <form action="/add-task" method="post" id="task-input" class="flex flex-1 flex-wrap flex-col md:flex-row items-center justify-start m-2 space-x-6">
-
-        <div class="task m-2 rounded-xl">
-            <label for="task-input">Task</label>
-            <input type="text" name="task" id="task-input" class="border-2 p-2 shadow-inner">
+    <form action="/add-task" method="post" id="task-input" class="flex flex-1 flex-wrap flex-col md:flex-row items-center justify-center p-4 space-y-6 md:space-y-0 md:space-x-6 border rounded-xl shadow-md bg-white">
+        <div class="task w-full md:w-1/3 rounded-xl">
+            <input type="text" name="task" id="task-input" class="border-2 rounded-xl p-2 shadow-inner w-full" placeholder="Enter a task">
         </div>
-
-        <div class="date m-2">
-            <label for="date-input">Date</label>
-            <input type="date" name="date" id="date-input" class="border-2 rounded-xl p-2">
+        <div class="date w-full md:w-1/3">
+            <input type="date" name="date" id="date-input" class="border-2 rounded-xl p-2 w-full">
         </div>
-                    
-        <button type="submit" class="border-2 mx-auto md:mx-0 p-2 m-2 bg-blue-500 text-white rounded-xl">Submit</button>
+        <div class="w-full md:w-1/4">
+            <button type="submit" class="w-full p-2 bg-blue-400 text-white rounded-xl font-bold">Submit</button>
+        </div>
     </form>
-    
-    <!-- Time and Date section -->
-    <!-- <div class="flex justify-center items-center space-x-6"> 
-        <div class="text-center shadow-sm p-4"> 
-            <h1 id="dateDisplay" class="text-3xl"></h1>
-        </div>
-        <div class="text-center shadow-sm p-4"> 
-            <h1 id="timeDisplay" class="text-3xl"></h1>
-        </div>
-    </div> -->
-</div>
 
+</div>
